<resources>
    <string name="app_name">Reminder</string>
    <string name="text1">Notification setting</string>
    <string name="text2">Enter the text below that you want to display</string>
    <string name="textupdate">Create notification</string>
    <string name="action_about">About the program</string>
    <string name="version">Installed version: 1.</string>
    <string name="pref_openmode">Opening Mode</string>
    <string name="pref_color">Color</string>
    <string name="pref_color_black">Black color</string>
    <string name="pref_color_red">Red color</string>
    <string name="pref_color_green">Green color</string>
    <string name="pref_color_blue">Blue color</string>
    <string name="pref_size">Size</string>
    <string name="pref_style">Style</string>
    <string name="pref_style_regular">Normal</string>
    <string name="pref_style_bold">Bold</string>
    <string name="pref_style_italic">Italy</string>
    <string name="about">About the program</string>
    <string name="creator">Creator: deVDem</string>
    <string name="welcome">Welcome</string>
    <string name="firstset">Initial setup is in progress</string>
    <string name="letsgo">Lets go!</string>
    <string name="zagolovok">Header</string>
    <string name="sodershanie">Content</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="createno">Notifications created: </string>
    <string name="lastver">Latest version: 1.</string>
    <string name="aver">A new version is available.</string>
    <string name="error">Error</string>
    <string name="checkupdate">Check for updates</string>
    <string name="notebook">Notebook</string>
    <string name="fontsizet">Enter the font size (10 to 32)</string>
    <string name="setfontsi">Sets the new font size</string>
    <string name="fontsizes">Font size</string>
    <string name="stylefont">Style for the font</string>
    <string name="setstylef">Sets the style for the font</string>
    <string name="selectf">Select a font style</string>
    <string name="pref_open">Open</string>
    <string name="pref_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="testers"><b>Testers and motivation:</b>\nTemass, Ayyume, AxewB</string>
    <string name="blacktheme">Dark theme</string>
    <string name="whitetheme">Light(Lightblue) theme</string>
    <string name="orangetheme">Light(Orange) theme</string>
    <string name="greentheme">Light(Green) theme</string>
    <string name="bluetheme">Light(Blue) theme</string>
    <string name="pinktheme">Light(Pink) theme</string>
    <string name="darkgreentheme">Dark(Green) theme</string>
    <string name="action_settingtheme">Settings</string>
    <string name="choose">Select a Theme</string>
    <string name="with">What theme?</string>
    <string name="needrestart">You need to restart the application</string>
    <string name="graphics">Graphics</string>
    <string name="rate">It would not be bad if you left feedback about the application :)</string>
    <string name="music">Leave music</string>
    <string name="musictoast">Music will play to the end</string>
    <string name="musictoggle">Music will not play until the end</string>
    <string name="nomusic">Do not leave music</string>
    <string name="themtext">For lovers of light.\nDefault: <b>disabled</b></string>
    <string name="graptext">For some beauty.Loads the device.\nExperimental.\nDefault: <b>enabled</b></string>
    <string name="notsup">Unfortunately, your device is not supported. :(</string>
    <string name="advancent">Extended notice?</string>
    <string name="support">Contacting me: <b>pomamed2024@gmail.com</b></string>
    <string name="noadset">Disable ad</string>
    <string name="noadabout">Disables advertising, reduces developer revenue.\nDefault: <b>disabled</b></string>
    <string name="editbutton">Title and content of the notification</string>
    <string name="export">Export</string>
    <string name="whereexport">Where to export?</string>
    <string name="savesettings">Settings have been saved.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mainmenu">Main menu</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="signin">Sign in</string>
    <string name="loginemail">Username/Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notreg">Not registered? <b>Sign up</b> now</string>
    <string name="signup">Sign up</string>
    <string name="username">Login</string>
    <string name="cpassword">Confirm password</string>
    <string name="spam">I want to receive information about the application on the mail</string>
    <string name="account">Account β</string>
    <string name="name">Name</string>
    <string name="psnot">Passwords do not match</string>
    <string name="notpas">Login and/or password does not match</string>
    <string name="regfail">Can not create account.\nPossible causes: \n No internet on your device; \n Server side problems; \n This login is already taken; \n This mail is already taken</string>
    <string name="retry">Retry</string>
    <string name="nopole">Not all fields are filled out</string>
    <string name="dbsearch">It is found that the reminder information on the device does not match on the server. Where to synchronize?</string>
    <string name="server">Server</string>
    <string name="phone">Phone</string>
    <string name="cancel">Cancel</string>
    <string name="savesettingssync">Settings have been saved. Synced</string>
    <string name="savesettingssyncerr">Settings have been saved. Sync error</string>
    <string name="info">About account</string>
    <string name="settinguser">User Settings</string>
    <string name="changepass">Change password</string>
    <string name="changename">Change name</string>
    <string name="changeemail">Change E-Mail Address</string>
    <string name="deleteaccount">Delete account</string>
    <string name="spamon">Newsletter about the application is enabled</string>
    <string name="spamoff">Newsletter about the application is disabled</string>
    <string name="offspam">Disable emailing about the application</string>
    <string name="onspam">Enable emailing about the application</string>
    <string name="by_devdem">by deVDem</string>
    <string name="success">Success</string>
    <string name="lengtherr">Invalid length (from 2 characters)</string>
    <string name="newpass">New password</string>
    <string name="newemail">New E-Mail Address</string>
    <string name="erremail">Incorrect e-mail address</string>
    <string name="fail">Fail</string>
    <string name="fornoad">Thank you for your purchase! :3</string>
    <string name="timeouterror">Connection error. To retry?</string>
    <string name="loading">Loading..</string>
</resources>
