<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_about"
            android:orderInCategory="103"
            android:title="@string/action_about"
            android:icon="@drawable/ic_info"/>
        <item
            android:id="@+id/action_note"
            android:orderInCategory="100"
            android:title="@string/notebook"
            android:icon="@drawable/ic_notebook"/>
        <item
            android:id="@+id/action_themesetting"
            android:orderInCategory="102"
            android:title="@string/action_settingtheme"
            android:icon="@drawable/ic_settings"/>
        <item
            android:id="@+id/action_account"
            android:orderInCategory="104"
            android:title="Account"
            android:icon="@android:drawable/sym_contact_card"/>
    </group>
</menu>