<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/hellotextss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:text=""
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/infoacc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="bottom|left|center"
        android:text=""
        android:textSize="18sp"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/settinguser"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnnamech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changename" />

    <Button
        android:id="@+id/btnoffspam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/btnpassch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changepass" />

    <Button
        android:id="@+id/btnemailch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changeemail" />

    <Button
        android:id="@+id/btndelch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/deleteaccount"
        android:textColor="#f55" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/by_devdem"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </RelativeLayout>

</LinearLayout>