<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/edittext3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/zagolovok"
        android:inputType="textShortMessage"
        android:singleLine="true"
        android:minLines="1">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edittext4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/sodershanie"
        android:imeOptions="actionDone"
        android:maxLines="13">

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advancent" />

</LinearLayout>