<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="devdem.time.ThemeSetting"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/action_settings"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:gravity="left|center_horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/choose"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:entries="@array/themes"
                tools:ignore="InefficientWeight" />
        </LinearLayout>

        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:onClick="onClick2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/graphics" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/graptext"
            tools:ignore="RtlSymmetry" />

        <Button
             android:id="@+id/button5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/noadset"
             android:onClick="onPurchaseClick"/>

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="ca-app-pub-7389415060915567/1438473909" />

</LinearLayout>
