<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button4l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordl"
        android:layout_centerHorizontal="true"
        android:background="@drawable/loginbutton"
        android:gravity="center"
        android:onClick="LoginClick"
        android:text="@string/login"
        android:textColor="#fff"
        android:translationZ="1dp"
        android:visibility="visible"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/etUsernamel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="191dp"
        android:ems="10"
        android:hint="@string/loginemail"
        android:inputType="textEmailAddress"
        android:visibility="visible"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/etPasswordl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsernamel"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:imeOptions="actionGo"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:visibility="visible"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView12l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4l"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:clickable="true"
        android:ems="20"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/notreg"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView18l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/signin"
        android:textColor="?attr/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageView2l"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/button4l"
        android:layout_centerHorizontal="true"
        android:translationZ="2dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/shape_oval"
        tools:ignore="ContentDescription,UnusedAttribute" />

    <TextView
        android:id="@+id/etSigninl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:translationZ="2dp"
        android:visibility="invisible"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>