<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="devdem.time.AboutActivity"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/sky"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="100dp"
        android:scaleY="3"
        android:src="@drawable/sky"
        android:fitsSystemWindows="true"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:src="@drawable/image_about"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sun"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        android:textStyle="bold|italic" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/creator" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/testers"
                android:textAllCaps="false"
                android:textIsSelectable="false" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/support" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/grass"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:paddingTop="30dp"
        android:rotation="-6"
        android:scaleType="center"
        android:scaleX="1.1"
        android:scaleY="1.3"
        android:src="@drawable/grass"
        tools:ignore="ContentDescription" />

</RelativeLayout>
